---------------------------
YAM Open Source - ChangeLog
---------------------------

$Id$
$URL$

2012-07-08 Jens Langner <Jens.Langner@light-speed.de>

  * base64.c: fixed bug in base64decode() where an incorrect pointer was used for
    the calculation of the final output string length. This caused crashes when
    extracting attachments from base64 encoded emails after the recent base64
    API changes.
  * Requesters.c, misc: did some housekeeping regarding the function calls of
    MUI_Request(). Now a refWindow should always be specified so that the position
    will always be relative to it. In addition MUIF_NONE is now always applied.
    Furthermore MSG_OkayReq is now used instead of MSG_Okay as that contains
    definitions for a keyboard shortcut.

2012-07-07 Samir Hawamdeh <s.hawamdeh@tin.it>

  * locale/italian.ct: update according to the latest changes.

2012-07-07 Jens Langner <Jens.Langner@light-speed.de>

  * Requesters.c, mui/GenericRequestWindow.c, tcp/ssl.c, misc: moved the
    SSL Certificate warning requester code to an own function in Requesters.c
    and adapted GenericRequestWindow to allow to use a Floattext for 
    creating requesters with resizable text. Now the certificate warning
    requester has an additional button "Show Certificate" which will show
    the whole human-readable output of the certificate in question so that a
    user could better judge if he trusts this certificate or not.
  * Debug.c,h: added a DBF_MTRACK flag which allows to output information
    on all alloc and free calls. This flag should, however, handled with care
    as it will output tons a information.
  * YAM_MAf.c: fixed a crash problem where in case a mail contained multiple
    "References:" headers YAM was overwriting the old one. Now StrBufCat()
    is used instead solving the problem.
  * mime/rfc2047.c: fixed minor bug where an base64/rfc2047 encoded string
    was not trimmed before being supplied to base64decode().